[project]
name = "llm-lmstudio"
version = "0.1.0"
description = "LLM plugin providing access to models running on LM Studio"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["llm>=0.26", "openai>=1.0.0", "pydantic>=2", "httpx"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/yourusername/llm-lmstudio"

[project.entry-points.llm]
lmstudio = "llm_lmstudio"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-mock"]
lint = ["ruff"]

[tool.setuptools.packages.find]
include = ["llm_lmstudio*"]
